# AegisAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  LOG.md  README.md  docker-compose.yml  planning.md  pyproject.toml  tasks.md
.github/workflows/: ci.yml
benchmarks/: README.md  run_v0.py
config/: routing_policy.yaml
deploy/helm/aegisai/: Chart.yaml  README.md  values.yaml
docs/adr/: 0000-template.md  0001-python-fastapi-control-plane.md
docs/fine_tune/: PLAYBOOK.md
docs/integrators/: SDK.md
docs/operations/: benchmark_baseline.json  release_checklist.md  scale_validation.md
docs/strategy/: expansion_roadmap.md
examples/demo-ui/: README.md  index.html
examples/http/: smoke.http
experiments/: train_lora.py
scripts/: benchmark_baseline.py  capture_demo_screenshots.py  ci_gate.py  qa_verify.sh  verify_e2e.sh
src/aegisai/: __init__.py  config.py  logging_json.py  main.py
src/aegisai/api/: openapi_extra.py
src/aegisai/benchmarks/: __init__.py  image_v0.py
tests/: conftest.py  test_audit_route.py  test_benchmark_image_v0.py  test_chroma_api.py  test_dlp_api.py  test_dlp_scan.py  test_e2e_deep.py  test_health.py  test_image_pipeline.py  test_jobs_api.py  test_metrics_api.py  test_p20_connectors.py  test_p21_asr.py  test_phase16_security.py  test_phase2_platform.py  test_phase3.py  test_phase4_cancel_ws.py  test_phase6_ws_auth.py  test_phase7_probes.py  test_phase8_rate_limit.py  test_policy_routes.py  test_rag_pipeline.py  test_redis_backends.py  test_version_endpoint.py  test_video_job.py  test_video_scene_ffmpeg.py
(+60 files in other folders)
